name:                positron
version:             0.1.0.0
synopsis:            Don't-Repeat-Yourself database library
description:         Please see README.md
homepage:            https://github.com/kinoru/positron#readme
license:             BSD3
license-file:        LICENSE
author:              kinoru
maintainer:          xkinoru@gmail.com
copyright:           2016 kinoru
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Positron
  other-modules:
    Positron.Alias
    Positron.Types
    Positron.Unsafe
  build-depends:
    bytestring >= 0.10.6.0 && < 0.11,
    postgresql-libpq >= 0.9.1.1 && < 0.10,
    scientific >= 0.3.4.7 && < 0.4,
    template-haskell >= 2.10.0.0 && < 3,
    text >= 1.2.2.1 && < 2,
    base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings

test-suite positron-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , positron
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kinoru/positron
