name:                positron
version:             0.1.0.0
synopsis:            Experiment
description:         Please see README.md
homepage:            https://github.com/xtendo-org/positron#readme
license:             BSD3
license-file:        LICENSE
author:              XT
maintainer:          e@xtendo.org
copyright:           2016 XT
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Positron
  other-modules:
    Positron.Alias
    Positron.Binary
    Positron.Driver
    Positron.Import
    Positron.Instance
    Positron.Parser
    Positron.Query
    Positron.Types
    Positron.Unsafe
    Positron.Util
  build-depends:
    attoparsec,
    bytestring,
    postgresql-libpq,
    scientific,
    template-haskell,
    text,
    base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings

test-suite positron-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , positron
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xtendo-org/positron
